// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/aws-machine-image/index getSortedAwsMachineImages() with 1 returned image 1`] = `
[
  {
    "args": [
      DescribeImagesCommand {
        "input": {
          "Filters": [
            {
              "Name": "owner-id",
              "Values": [
                "602401143452",
              ],
            },
            {
              "Name": "name",
              "Values": [
                "1image",
              ],
            },
          ],
        },
        "middlewareStack": {
          "add": [Function],
          "addRelativeTo": [Function],
          "applyToStack": [Function],
          "clone": [Function],
          "concat": [Function],
          "remove": [Function],
          "removeByTag": [Function],
          "resolve": [Function],
          "use": [Function],
        },
      },
    ],
    "callId": 1,
    "callback": undefined,
    "errorWithCallStack": [Error],
    "exception": undefined,
    "firstArg": DescribeImagesCommand {
      "input": {
        "Filters": [
          {
            "Name": "owner-id",
            "Values": [
              "602401143452",
            ],
          },
          {
            "Name": "name",
            "Values": [
              "1image",
            ],
          },
        ],
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
    },
    "lastArg": DescribeImagesCommand {
      "input": {
        "Filters": [
          {
            "Name": "owner-id",
            "Values": [
              "602401143452",
            ],
          },
          {
            "Name": "name",
            "Values": [
              "1image",
            ],
          },
        ],
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
    },
    "proxy": [Function],
    "returnValue": Promise {},
    "thisValue": EC2Client {
      "config": {
        "apiVersion": "2016-11-15",
        "base64Decoder": [Function],
        "base64Encoder": [Function],
        "bodyLengthChecker": [Function],
        "credentialDefaultProvider": [Function],
        "credentials": [Function],
        "customUserAgent": undefined,
        "defaultUserAgentProvider": [Function],
        "defaultsMode": [Function],
        "disableHostPrefix": false,
        "endpoint": [Function],
        "isCustomEndpoint": false,
        "logger": {},
        "maxAttempts": [Function],
        "region": [Function],
        "regionInfoProvider": [Function],
        "requestHandler": NodeHttpHandler {
          "configProvider": Promise {},
          "metadata": {
            "handlerProtocol": "http/1.1",
          },
        },
        "retryMode": [Function],
        "retryStrategy": [Function],
        "runtime": "node",
        "serviceId": "EC2",
        "sha256": [Function],
        "signer": [Function],
        "signingEscapePath": true,
        "streamCollector": [Function],
        "systemClockOffset": 0,
        "tls": true,
        "urlParser": [Function],
        "useDualstackEndpoint": [Function],
        "useFipsEndpoint": [Function],
        "utf8Decoder": [Function],
        "utf8Encoder": [Function],
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
    },
  },
]
`;

exports[`modules/datasource/aws-machine-image/index getSortedAwsMachineImages() with 3 returned images 1`] = `
[
  {
    "args": [
      DescribeImagesCommand {
        "input": {
          "Filters": [
            {
              "Name": "owner-id",
              "Values": [
                "602401143452",
              ],
            },
            {
              "Name": "name",
              "Values": [
                "3images",
              ],
            },
          ],
        },
        "middlewareStack": {
          "add": [Function],
          "addRelativeTo": [Function],
          "applyToStack": [Function],
          "clone": [Function],
          "concat": [Function],
          "remove": [Function],
          "removeByTag": [Function],
          "resolve": [Function],
          "use": [Function],
        },
      },
    ],
    "callId": 0,
    "callback": undefined,
    "errorWithCallStack": [Error],
    "exception": undefined,
    "firstArg": DescribeImagesCommand {
      "input": {
        "Filters": [
          {
            "Name": "owner-id",
            "Values": [
              "602401143452",
            ],
          },
          {
            "Name": "name",
            "Values": [
              "3images",
            ],
          },
        ],
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
    },
    "lastArg": DescribeImagesCommand {
      "input": {
        "Filters": [
          {
            "Name": "owner-id",
            "Values": [
              "602401143452",
            ],
          },
          {
            "Name": "name",
            "Values": [
              "3images",
            ],
          },
        ],
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
    },
    "proxy": [Function],
    "returnValue": Promise {},
    "thisValue": EC2Client {
      "config": {
        "apiVersion": "2016-11-15",
        "base64Decoder": [Function],
        "base64Encoder": [Function],
        "bodyLengthChecker": [Function],
        "credentialDefaultProvider": [Function],
        "credentials": [Function],
        "customUserAgent": undefined,
        "defaultUserAgentProvider": [Function],
        "defaultsMode": [Function],
        "disableHostPrefix": false,
        "endpoint": [Function],
        "isCustomEndpoint": false,
        "logger": {},
        "maxAttempts": [Function],
        "region": [Function],
        "regionInfoProvider": [Function],
        "requestHandler": NodeHttpHandler {
          "configProvider": Promise {},
          "metadata": {
            "handlerProtocol": "http/1.1",
          },
        },
        "retryMode": [Function],
        "retryStrategy": [Function],
        "runtime": "node",
        "serviceId": "EC2",
        "sha256": [Function],
        "signer": [Function],
        "signingEscapePath": true,
        "streamCollector": [Function],
        "systemClockOffset": 0,
        "tls": true,
        "urlParser": [Function],
        "useDualstackEndpoint": [Function],
        "useFipsEndpoint": [Function],
        "utf8Decoder": [Function],
        "utf8Encoder": [Function],
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
    },
  },
]
`;

exports[`modules/datasource/aws-machine-image/index getSortedAwsMachineImages() without returned images 1`] = `
[
  {
    "args": [
      DescribeImagesCommand {
        "input": {
          "Filters": [
            {
              "Name": "owner-id",
              "Values": [
                "602401143452",
              ],
            },
            {
              "Name": "name",
              "Values": [
                "noiamge",
              ],
            },
          ],
        },
        "middlewareStack": {
          "add": [Function],
          "addRelativeTo": [Function],
          "applyToStack": [Function],
          "clone": [Function],
          "concat": [Function],
          "remove": [Function],
          "removeByTag": [Function],
          "resolve": [Function],
          "use": [Function],
        },
      },
    ],
    "callId": 2,
    "callback": undefined,
    "errorWithCallStack": [Error],
    "exception": undefined,
    "firstArg": DescribeImagesCommand {
      "input": {
        "Filters": [
          {
            "Name": "owner-id",
            "Values": [
              "602401143452",
            ],
          },
          {
            "Name": "name",
            "Values": [
              "noiamge",
            ],
          },
        ],
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
    },
    "lastArg": DescribeImagesCommand {
      "input": {
        "Filters": [
          {
            "Name": "owner-id",
            "Values": [
              "602401143452",
            ],
          },
          {
            "Name": "name",
            "Values": [
              "noiamge",
            ],
          },
        ],
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
    },
    "proxy": [Function],
    "returnValue": Promise {},
    "thisValue": EC2Client {
      "config": {
        "apiVersion": "2016-11-15",
        "base64Decoder": [Function],
        "base64Encoder": [Function],
        "bodyLengthChecker": [Function],
        "credentialDefaultProvider": [Function],
        "credentials": [Function],
        "customUserAgent": undefined,
        "defaultUserAgentProvider": [Function],
        "defaultsMode": [Function],
        "disableHostPrefix": false,
        "endpoint": [Function],
        "isCustomEndpoint": false,
        "logger": {},
        "maxAttempts": [Function],
        "region": [Function],
        "regionInfoProvider": [Function],
        "requestHandler": NodeHttpHandler {
          "configProvider": Promise {},
          "metadata": {
            "handlerProtocol": "http/1.1",
          },
        },
        "retryMode": [Function],
        "retryStrategy": [Function],
        "runtime": "node",
        "serviceId": "EC2",
        "sha256": [Function],
        "signer": [Function],
        "signingEscapePath": true,
        "streamCollector": [Function],
        "systemClockOffset": 0,
        "tls": true,
        "urlParser": [Function],
        "useDualstackEndpoint": [Function],
        "useFipsEndpoint": [Function],
        "utf8Decoder": [Function],
        "utf8Encoder": [Function],
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
    },
  },
]
`;
